Fixes z-index for main menu and header

--- a/src/style/partials/_layout.scss
+++ b/src/style/partials/_layout.scss
@@ -30,7 +30,7 @@ app-telephone                                   { width:100%; display:flex; alig
 .body                                           { padding:85px 16px 16px 16px; width:100%; min-height:100vh; }
 
 /***** Headers *****/
-.headerMobile                                   { padding:0; display:flex; height:60px; width:100%; background-color:$color--midnight; position:fixed; top:0; right:0; z-index:10; }
+.headerMobile                                   { padding:0; display:flex; height:60px; width:100%; background-color:$color--midnight; position:fixed; top:0; right:0; z-index:21; }
 .headerMobile a, .headerMobile button           { display:flex; width:50px; height:60px; align-items:center; background-color:transparent; color:$color--snow; justify-content:center; text-decoration:none; }
 .headerMobile-nav                               { margin:0; padding:0; list-style:none; display:flex; width:100%; color:$color--snow; }
 .headerMobile-nav li                            { margin:0; padding:0; width:50px; height:60px; flex-grow:1; display:flex; align-items:center; }
